# NextEmu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  emu.py  main.cpp  test.cpp
builtin/: CMakeLists.txt
builtin/device/bus/: CMakeLists.txt
builtin/device/bus/src/: common.cpp
builtin/device/dummy/: test.cpp
builtin/device/dummy/include/: DummyDev.hpp
builtin/device/mem/src/: mem.cpp
builtin/device/rvcore_simple/: test.cpp
builtin/device/rvcore_simple/include/: RV64SV39_MMU.h
builtin/device/rvcore_simple/include/misc/: rv64_int_status.h  rv64_structs.h
builtin/device/rvcore_simple/include/ref/: rv_core.hpp  rv_priv.hpp  rv_sv39.hpp  rv_systembus.hpp
builtin/device/rvcore_simple/src/: rv64_amo.cpp  rv64_common.cpp
builtin/device/rvcore_spike/: CMakeLists.txt  test.cpp
builtin/device/rvcore_spike/include/: SpikeCore.h  SpikePlatform.hpp  mysim.h  spike_obj_factory.h
builtin/device/rvcore_spike/misc/include/: config.h  insn_list.h
builtin/device/rvcore_spike/src/: spike_platform.cpp
builtin/device/uart_rtl/: CMakeLists.txt  test.cpp
builtin/device/uart_rtl/include/: UartRtl.h
builtin/device/uart_rtl/rtl/: Top.v  UartRx.v
builtin/device/uart_rtl/rtl/obj_dir/: VTop.h  VTop.mk  VTop__Slow.cpp  VTop__ver.d  VUartRx.h  VUartRx.mk  VUartRx__Slow.cpp  VUartRx__Syms.cpp  VUartRx__Syms.h  VUartRx__ver.d  VUartRx_classes.mk
builtin/device/uart_rtl/rtl/src/: VTop.cpp  VTop__Trace.cpp  VTop__Trace__Slow.cpp  VUartRx.cpp  VUartRx__Trace.cpp  VUartRx__Trace__Slow.cpp
builtin/device/uart_rtl/src/: mem.cpp  uart_rtl.cpp
builtin/device/uartlite/: CMakeLists.txt  test.cpp
builtin/device/uartlite/include/: Uartlite.hpp
builtin/device/uartlite_rtl/: CMakeLists.txt  test.cpp
builtin/device/uartlite_rtl/include/: UartliteRtl.h
builtin/device/uartlite_rtl/src/: uart_rtl.cpp
builtin/platform/rvcore_simple/include/: RV64Core.h
builtin/platform/rvcore_simple/include/misc/: rv64_sv39_structs.h
builtin/platform/rvcore_spike/include/: SpikePlatform.hpp
builtin/platform/rvcore_spike/private_include/: mysim.h
builtin/platform/rvcore_spike/src/: spike_platform.cpp
builtin/rtl_adapter/axilite/: CMakeLists.txt  test.cpp
builtin/rtl_adapter/axilite/include/: AXILiteAdapter.h
builtin/rtl_adapter/axilite/private_include/: ModuleIf.h
builtin/rtl_adapter/axilite/rtl/: AXIMaster.v  Top.v
builtin/rtl_adapter/axilite/src/: adapter_common.cpp
builtin/rtl_adapter/uart_encoder/: CMakeLists.txt
builtin/waveform_encoder/axi_encoder/: CMakeLists.txt  test.cpp
builtin/waveform_encoder/axilite/: CMakeLists.txt  test.cpp
builtin/waveform_encoder/axilite/include/: AXILite.h
builtin/waveform_encoder/axilite/rtl/: AXIMaster.v
builtin/waveform_encoder/uart_encoder/: test.cpp
builtin/waveform_encoder/uart_encoder/include/: UartEncoder.h  UartFIFOEncoder.h
cmake/: global_cfg.cmake  verilator.cmake
example/: minicpu_full_sys.cpp  simple_full_sys.cpp
include/example/: minicpu_full_sys.h  simple_full_sys.h
include/sdk/: console.h  global_mutex.h  sdkconfig.h  symbol_attr.h  test.h  utils.h
include/sdk/base/: AddrBus.hpp  ByteStreamStub.h  ClkDrive.hpp  GDBStub.h  LogicAnalyzer.hpp  SRAMAdapter.hpp  ThreadPool.h
include/sdk/interface/: core_if.h  dev_if.h  digital_if.h  interconnect.h  samplable.h  status_enum.h  struct_defs.h  waveform_generator.h
misc/: simple.dts
misc/minicpu_app/: build.sh  linker.ld  main.c  start.S  start.elf
misc/rootfs_addons/etc/: profile
modules/: CMakeLists.txt
modules/device/dummy/: CMakeLists.txt  test.cpp
modules/device/dummy/include/: DummyDev.h
modules/device/dummy/src/: common.cpp
modules/device/mem/: CMakeLists.txt  test.cpp
modules/device/mem/include/: Mem.h
modules/device/minicpu_controller/: CMakeLists.txt  test.cpp
modules/device/minicpu_controller/include/: MiniCPUController.h
modules/device/minicpu_controller/src/: common.cpp
modules/device/uart_rtl/: CMakeLists.txt  CMakeLists.txt.bak  test.cpp
modules/device/uartlite/include/: Uartlite.hpp
modules/device/uartlite_rtl/: test.cpp
modules/device/uartlite_rtl/rtl/: UartRx.v
modules/platform/rvcore_minicpu/: CMakeLists.txt  test.cpp
modules/platform/rvcore_minicpu/include/rvcore_minicpu/: MiniCPUCore.h  RV64SV39_MMU.h  rv64_int_status.h
modules/platform/rvcore_minicpu/include/rvcore_minicpu/misc/: rv64_csr_structs.h  rv64_inst.h  rv64_structs.h  rv64_sv39_structs.h
modules/platform/rvcore_minicpu/private_include/: CLInt.h
modules/platform/rvcore_minicpu/src/: rv64_alu.cpp  rv64_amo.cpp  rv64_common.cpp  rv64_debug.cpp  rv64_exec.cpp  rv64_privilege.cpp  rv64_sv39.cpp
modules/platform/rvcore_simple/: CMakeLists.txt  test.cpp
modules/platform/rvcore_simple/include/: CLInt.h  PLIC.h  RV64Core.h
modules/platform/rvcore_simple/include/misc/: rv64_csr_structs.h  rv64_inst.h  status_enum.h
modules/platform/rvcore_simple/src/: rv64_alu.cpp  rv64_common.cpp  rv64_debug.cpp  rv64_exec.cpp  rv64_privilege.cpp  rv64_sv39.cpp
modules/platform/rvcore_spike/: CMakeLists.txt  test.cpp
modules/platform/rvcore_spike/src/: spike_platform.cpp
modules/rtl_adapter/axi_encoder/: CMakeLists.txt
modules/rtl_adapter/axi_encoder/src/: mem.cpp
modules/rtl_adapter/axilite/: CMakeLists.txt  test.cpp
modules/rtl_adapter/axilite/include/: AXILiteAdapter.h
modules/rtl_adapter/axilite/private_include/: ModuleIf.h
modules/rtl_adapter/axilite/rtl/: Slave.v  Top.v
modules/rtl_adapter/axilite/src/: adapter_common.cpp
modules/rtl_adapter/uart_encoder/: test.cpp
modules/rtl_adapter/uart_encoder/include/: UartEncoder.h
scripts/: build_image.sh  build_toolchain.sh  gen_module.py
src/gdb_stub/: GDBStub_cmds.cpp  GDBStub_common.cpp  GDBStub_utils.cpp  README.md  gdb_rsp.cpp  unit_test.cpp
src/gdb_stub/include/: gdb_rsp.h
test/: full.cpp  uart_rtl.cpp
