add_subdirectory(device/mem)
add_subdirectory(device/bus)
add_subdirectory(device/uart_rtl)
add_subdirectory(device/uartlite)
add_subdirectory(platform/rvcore_spike)
add_subdirectory(platform/rvcore_simple)
add_subdirectory(waveform_encoder/uart_encoder)
add_subdirectory(waveform_encoder/axi_encoder)
add_subdirectory(waveform_encoder/axilite)