add_subdirectory(device/mem)
add_subdirectory(device/bus)
add_subdirectory(device/uart_rtl)
add_subdirectory(device/uartlite_rtl)
add_subdirectory(device/uartlite)
add_subdirectory(device/dummy)
add_subdirectory(platform/rvcore_spike)
add_subdirectory(platform/rvcore_simple)
add_subdirectory(rtl_adapter/uart_encoder)
add_subdirectory(rtl_adapter/axi_encoder)
add_subdirectory(rtl_adapter/axilite)